--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
 
 <body class="dark">
     <div class="header">
+        <nav>
+            <div class="logo">Logo</div>
+            <div class="nav-part">
+                <div class="aboutme" data-link="myaboutMe">About Me</div>
+                <div class="services" data-link="myservices">Services</div>
+                <div class="works" data-link="myworks">Works</div>
+                <div class="toos" data-link="mytools">Tools</div>
+            </div>
+            <div class="nav-part-mobile">
+                <div class="aboutme" data-link="myaboutMe">About Me</div>
+                <div class="services" data-link="myservices">Services</div>
+                <div class="works" data-link="myworks">Works</div>
+                <div class="toos" data-link="mytools">Tools</div>
+              </div>
+            <div class="hamburger">      <i class="fa-solid fa-bars"></i>
+            </div>      
+            <div class="close">
+              <i class="fa-solid fa-xmark"></i>
+            </div>
+          </nav>
         <div class="bg-theme-container">
             <div class="bg-theme">
                 <div class="sun">
@@ -55,12 +75,13 @@
           </span>
             </div>
         </div>
-        <button class="btn-light btn-seemore">See More</button>
-
+<div class="buttons">
+    <button class="btn-light btn-seemore">See More</button>
+</div>
         <div class="wave"></div>
     </div>
     <div class="main" id="main">
-        <div class="content1">
+        <div class="content1" id = "myaboutMe">
             <div class="details1 animated" data-delay=".85s">
                 <div class="about-me ">
                     About me
@@ -86,7 +107,7 @@
 
             </div>
         </div>
-        <div class="content3">
+        <div class="content3" id = "myservices">
             <div class="my-section-title">
                 <div>My</div>
                 <div>Services</div>
@@ -118,7 +139,7 @@
             </div>
         </div>
 
-        <div class="content34">
+        <div class="content34" id = "myworks">
             <div class="my-section-title2">
                 <div>My</div>
                 <div>Works</div>
@@ -149,7 +170,7 @@
                 <i class="fa-solid fa-chevron-up fa-chevron-up2" data-delay="1.2s"></i>
             </div>
         </div>
-        <div class="content4">
+        <div class="content4" id = "mytools">
             <div class="content4title">What Tools I use</div>
             <div class="choices">
                 <div class="frontend" data-target="frontend">FrontEnd
@@ -237,6 +258,8 @@
                 <div class="social-icons">
                     <i class="fa-brands fa-telegram"></i>
                 </div>
+                <button class="btn-light btn-download">Download CV</button>
+
             </div>
         </div>
     </div>
