try to fix the download cv button

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 <div class="social-icons">
                     <i class="fa-brands fa-telegram"></i>
                 </div>
-                <button class="btn-light btn-download">Download CV</button>
+                <button class="btn-light btn-download">See CV</button>
 
             </div>
         </div>
